--- a/styles/main.css
+++ b/styles/main.css
@@ -179,7 +179,7 @@ p.subheader {
   display: block;
   margin: 0 auto;
 }
-.card .btn-secondary {
+.btn-secondary {
   max-width: 225px;
   background-color: #0c0c0c;
 }
