--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,6 @@ h5 {
   margin: 1em 0 0.3em 0;
 }
 
-
 /* HEADER */
 header {
   display: flex;
@@ -170,20 +169,6 @@ p.subheader {
 /* GALLERY */
 #gallery {
   background-color: #fff;
-
-  /* background: rgb(27,43,159);
-  background: -moz-linear-gradient(90deg, rgba(27,43,159,1) 35%, rgba(0,59,180,1) 100%);
-  background: -webkit-linear-gradient(90deg, rgba(27,43,159,1) 35%, rgba(0,59,180,1) 100%);
-  background: linear-gradient(90deg, rgba(27,43,159,1) 35%, rgba(0,59,180,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1b2b9f",endColorstr="#003bb4",GradientType=1); */
-
-  /* color: #0c0c0c;
-  background-color: #f3f4f9;
-  background-repeat: no-repeat;
-  background-image: url(../img/bg/px-bg.jpg);
-  background-position: center top;
-  background-size: contain; */
-
 }
 #gallery .card {
   display: block;
@@ -193,7 +178,6 @@ p.subheader {
 }
 .card {
   height: 100%;
-  /* min-height: 600px; */
 }
 .card-body {
   color: #0c0c0c;
@@ -209,30 +193,28 @@ p.subheader {
   max-width: 225px;
   background-color: #0c0c0c;
 }
+[class*=" imghvr-"] figcaption, [class^=imghvr-] figcaption { /* gallery item hover */
+  background-color: #0c0c0c !important;
+}
+[class*=" imghvr-"]>img, [class^=imghvr-]>img {
+  width: 318px !important;
+}
 
 /* CONTACT */
 #contact {
-  /* background-color: #d6dde5; */
   color: #f8f8f8;
-  /* height: 100%; */
-  /* max-height: 1000px; */
-  /* background-image: url(../img/bg/mtn-v2.jpg);
-  background-position: 50% 0%;
-  background-size: cover; */
-
   color: #0c0c0c;
   background-color: #d8dce5;
   background-repeat: no-repeat;
-  /* background-image: url(../img/bg/mtn-v2.jpg); */
   background-image: url(../img/bg/mtn-v2.jpg);
   background-position: center bottom;
   background-size: cover;
 
 }
 #contact form {
-    padding: 2em;
-    border-radius: 6px;
-    background-color: rgba(255, 255, 255, 0.5);
+  padding: 2em;
+  border-radius: 6px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #contact label {
